Fri Sep 24 08:49:38 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * NEWS:
        * TAO_IDL/util/utl_global.cpp:
          Changed the default behaviour of the IDL compiler when it
          encounters an anonymous type. It'll now generate an error.

Thu Sep 23 16:16:12 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * rules.tao.GNU:

          Updated setting the shared library version numbers to match the
          recent change to gnu.mpd and rules.lib.GNU.

Thu Sep 23 13:16:03 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_component/servant_svs.cpp:
          Fixed indentation problem

Thu Sep 23 12:50:25 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * orbsvcs/orbsvcs/Trader/Service_Type_Repository.h:
        * orbsvcs/orbsvcs/Trader/Trader_Utils.h:
        * orbsvcs/orbsvcs/Trader/Trader_Interfaces.h:
        * orbsvcs/FT_ReplicationManager/FT_DefaultFaultAnalyzer.cpp:
          Removed non-ASCII characters in comments.

        * orbsvcs/examples/ImR/Combined_Service/start_all.conf:
        * orbsvcs/examples/ImR/Combined_Service/run_test.pl:
          Extended timeouts. Previous ones were too short on valgrind builds.

        * tao/PortableServer/RequestProcessingStrategyDefaultServant.cpp:
        * tao/PortableServer/RequestProcessingStrategyServantActivator.cpp:
        * tao/PortableServer/RequestProcessingStrategyAOMOnly.cpp:
        * tao/PortableServer/RequestProcessingStrategyServantLocator.cpp:
          Added code that ignores any exception from the servant's cleanup.
          This fixes a problem where servant wasn't removed from a poa in case
          servant's destructor threw an exception.

        * tests/ORB_shutdown/Foo_Bar.cpp:
          Don't allow exceptions to propagate out of the servant's destructor.

        * performance-tests/Cubit/TAO/IDL_Cubit/run_test.pl:
          Extended the test so that it can run without SHMIOP part.
